--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==2.0.1
 requests==2.26.0
-Pillow==8.3.1
+Pillow==10.3.0
 google-auth-oauthlib==0.4.6
 google-api-python-client==2.21.0
+gunicorn==20.1.0
